k8s/react.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-app
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-app
spec:
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app-calendar
          image: ghcr.io/dlike230/cis188-project/final-project-frontend:${TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      restartPolicy: Always
