k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: "vishaalk.cis188.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 80
          - path: "/calendar"
            pathType: Prefix
            backend:
              service:
                name: fastapi
                port:
                  number: 80
  tls:
    - hosts:
        - "vishaalk.cis188.org"
      secretName: vishaalk-cis188-org-tls
